# 2021-04-11-webscraper

./: README.md  app.py  indeed.py  indeed_scraping.py  jobs.csv  main.py  pyproject.toml  so.py
scrapper/: csv_exporter.py  indeed.py  jobs.csv  main.py  saramin.py  so.py
templates/: home.html  report.html
